<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app_bg"
    tools:context=".Fragments.WelFragment1">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/welcome_to_bgmi_s_wallpapers"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/get_best_collection_of_wallpapers_of_your_favorite_game_we_have_the_wallpapers_of_all_versions_of_game"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/start_image_2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:elevation="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:elevation="10dp"
            android:src="@drawable/right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/continue_btn"
            app:layout_constraintEnd_toEndOf="@+id/continue_btn"
            app:layout_constraintTop_toTopOf="@+id/continue_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>