<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/how_would_you_like_to_improve_us"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtTxt"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/text_view_bg"
            android:gravity="start"
            android:textColor="@color/black"
            android:hint="@string/write_your_feedback_here"
            android:padding="5dp"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/edtTxt"
            android:layout_marginTop="16dp"
            android:background="@color/gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTxt"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/cancel"
                    android:textColor="#9CAEAA"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/textViewSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="Send"
                    android:textColor="@color/overFlowMenuIcon"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</RelativeLayout>