<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbar_bg"
                android:theme="@style/Theme.BGMIsWallpapers"
                app:menu="@menu/home_menu"
                app:title="PUBG\'s Wallpapers"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/main_app_bg"
            android:scrollbars="none"
            android:id="@+id/SV_Home"
            android:layout_below="@id/app_bar_layout"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:id="@+id/LLTrending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:text="@string/trending"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="150dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/RVTrending"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />

                        <ProgressBar
                            android:id="@+id/PBTrending"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:indeterminateTint="@color/progressBar" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LLPopular"
                    android:layout_below="@id/LLTrending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:text="@string/popular"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="150dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/RVPopular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />

                        <ProgressBar
                            android:id="@+id/PBPopular"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:indeterminateTint="@color/progressBar" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LLCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/LLPopular"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:text="@string/categories"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="150dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/RVCategories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />

                        <ProgressBar
                            android:id="@+id/PBCategories"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:indeterminateTint="@color/progressBar" />

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LLMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/LLCategories"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:text="@string/more"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="150dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/RVMore"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />

                        <ProgressBar
                            android:id="@+id/PBMore"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:indeterminateTint="@color/progressBar" />

                    </RelativeLayout>

                </LinearLayout>


            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>



</FrameLayout>